Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-3437

Mingw-w64 build fail

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.9.3
    • 0.10.0
    • Build Process
    • Windows XP/7/8/10

    • Patch Available
    • Patch

    Description

      When building Thrift code under MinGW-w64, I got a compilation failure, due to the following problems:

      • Missing ws2_32 library link in CMakeLists.txt file
      • conflict with boost/tr1/functional.hpp, when using BOOST_THREAD
      • AI_ADDRCONFIG missing when Win32 version lower than 0x0600
      • Missing _MINGW32_ define

      Tests fail due to getsockname due to:

      • different Win32 getsockname behavior
      • BOOST_TEST_DYN_LINK not supported
      • Q_MOC_RUN / Boost conflict during build
      • mkstemp not supported (cause _mktemp_s should be used)

      Solved with pull request "Fixed MinGW-w64 build && boost/functional conflict #628"

      Attachments

        Activity

          People

            Unassigned Unassigned
            tony@becrux.com Antonio Di Monaco
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: