THRIFT-3437 Fixed MinGW-w64 build Client: Build Patch: Antonio Di Monaco

This closes #771