lib/cpp/src/thrift/transport/TSocket.cpp
@@ -53,6 +53,10 @@
 #endif // _WIN32
 #endif
 
+#if defined(_WIN32) && (_WIN32_WINNT < 0x0600)
+  #define AI_ADDRCONFIG 0x0400
+#endif
+
 template <class T>
 inline const SOCKOPT_CAST_T* const_cast_sockopt(const T* v) {
   return reinterpret_cast<const SOCKOPT_CAST_T*>(v);
